# jobs

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  state.json
.github/workflows/: post.yml  test.yml
docs/: setup-instagram-graph-api.md
docs/superpowers/plans/: 2026-07-03-instagram-jobs-automation.md
docs/superpowers/specs/: 2026-07-03-instagram-jobs-automation-design.md
scripts/: diagnose_ig.py
src/: config.py  instagram.py  main.py  render.py  state.py
src/sources/: assembly_bbs.py  assembly_dataA.py  base.py  selub.py
src/templates/: digest.css  digest.html.j2
tests/: test_base.py  test_config.py  test_instagram.py  test_main.py  test_mark_seen.py  test_render.py  test_source_assembly_bbs.py  test_source_assembly_dataA.py  test_source_selub.py  test_state.py
tests/fixtures/: assembly_bbs_page1.html  assembly_dataA_detail.html  assembly_dataA_page1.html  selub_local_council_page1.json
